<resources>
    <string name="app_name">my medical companion</string>
    <string name="OR">OR</string>
    <string name="contactDoctor">Contact doctor</string>
    <string name="medication">Medication</string>
    <string name="recommendTests">Recommend Tests</string>
    <string name="links">Useful Links</string>
    <string name="cardiology">cardiology</string>
    <string name="contact">Contact</string>
    <string name="mail">example123@abc.com</string>
    <string name="Health">Health</string>
    <string name="medicalNews">Medical News Today</string>
    <string name="medicine">Medicine</string>
    <string name="logOut">Logout</string>
    <string name="patients">Examining Patients</string>
    <string name="rcommendMedication">Recommend Medication</string>
    <string name="recommendedTests">Recommended Tests</string>
    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="forgetPass">Forget your Password?</string>
    <string name="dermatology">Dermatology</string>
    <string name="familyDoc">Family Doctor</string>
    <string name="taptosend">TAP TO SEND SOS Call TO 998</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="nurse">Nurse</string>
    <string name="reports">Reports</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPass">CONFIRM PASSWORD</string>
    <string name="emergency">Emergency</string>
    <string name="medicineRecomDoc">Medications recomended by the doctor</string>
    <string name="testRecomDoc">Tests recomended by the doctor</string>
    <string name="writeMed">write recommended medicines here</string>
    <string name="writeTest">write recommended tests here</string>
    <string name="neurology">Neurology</string>
    <string name="psychiatry">Psychiatry</string>
    <string name="name">Name</string>
    <string name="nicFormat">784-1010-1010101-4 (NIC)</string>
    <string name="search">Search</string>
    <string name="date">01/01/1998</string>
    <string name="nurseId">Nurse ID</string>
    <string name="reportsByNurse">Report by Nurse</string>
    <string name="create">Create</string>
    <string name="recommendd">Recomend</string>

</resources>