<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".showingmedsandteststonurse">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/medicineRecomDoc"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/patientmedsfornurse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/outline"
        android:padding="20dp"
        android:text="@string/medicine"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:padding="20dp"
        android:text="@string/testRecomDoc"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/patienttestsfornurse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/outline"
        android:padding="20dp"
        android:text="@string/recommendedTests"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/reportsByNurse"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/patientReportsNurseView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/outline"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/reports"
        android:textAlignment="center"
        android:textSize="20dp" />
    <Button
        android:id="@+id/btnCreateReport"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_signup"
        android:text="@string/create"
        android:textColor="@color/colorWhite" />
</LinearLayout>