<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <Button
        android:id="@+id/btnSignOutNurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:background="@drawable/outline"
        android:text="@string/logOut"
        android:textColor="@color/colorPrimaryDark" />
    <Button
        android:id="@+id/btnnursecontactdoctor"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/outline"
        android:text="@string/contactDoctor"

        />

    <Button
        android:id="@+id/btnpatientmedicinesnurse"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/outline"
        android:text="@string/reports" />


</LinearLayout>