<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llouter1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cl1"
        >
        <ScrollView
            android:id="@+id/sv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/lliner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <ImageView
                    android:id="@+id/ivdocneels1"
                    android:layout_width="240dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="20dp"
                    android:padding="16dp"
                    android:src="@drawable/logo" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tildocemail1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" android:id="@+id/tildocemail4"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tildocpassword1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password" android:id="@+id/tildocpassword4"/>
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btndoclogin1"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/background_login"
                    android:clickable="true"
                    android:padding="16dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />
                <Button
                    android:id="@+id/btndocforgotpassword1"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:padding="16dp"
                    android:text="@string/forgetPass"
                    android:background="@color/colorTransparent"
                    android:textColor="@color/colorPrimaryDark" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/OR"
                    android:layout_marginTop="-5dp"
                    android:layout_margin="5dp"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/btndocsignup1"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/background_signup"
                    android:clickable="true"
                    android:padding="16dp"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />




            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>