<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llouter1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/sv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/lliner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/ivneels1"
                    android:layout_width="240dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="20dp"
                    android:padding="16dp"
                    android:src="@drawable/logo" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilemail1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tilemail4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilpassword1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tilpassword4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnlogin1"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/background_login"
                    android:clickable="true"
                    android:padding="16dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnforgotpassword1"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorTransparent"
                    android:clickable="true"
                    android:padding="16dp"
                    android:text="@string/forgetPass"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginTop="-5dp"
                    android:gravity="center"
                    android:text="@string/OR" />

                <Button
                    android:id="@+id/btnsignuppatientlogin"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/background_signup"
                    android:clickable="true"
                    android:padding="16dp"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />


            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>