<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"

    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/mainLyout"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivlogo"
                android:layout_width="wrap_content"
                android:layout_height="235dp"

                android:src="@drawable/logo" />

            <Button
                android:id="@+id/btnsignupdoctor"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_login"
                android:clickable="true"
                android:padding="16dp"
                android:shadowColor="@android:color/background_light"
                android:text="@string/doctor"
                android:textAllCaps="false"
                android:textColor="#f16f7d"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnsignuppatient"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_signup"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/patient"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnsignupnurse"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_login"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/nurse"
                android:textAllCaps="false"
                android:textColor="#f16f7d"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8" />

            <Button
                android:id="@+id/btnEnglish"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/english"
                android:textColor="@color/colorWhite"
                android:textSize="10dp" />

            <Button
                android:id="@+id/btnArabic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="@string/arabic"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
