<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llnurseouter1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/clnurse1"
        >
        <ScrollView
            android:id="@+id/svnurse1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llnurseiner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <ImageView
                    android:id="@+id/ivnurseneels1"
                    android:layout_width="240dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="20dp"
                    android:padding="16dp"
                    android:src="@drawable/logo" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilnurseemail1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" android:id="@+id/tilnurseemail4"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilnursepassword1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password" android:id="@+id/tilnursepassword4"/>
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnnurselogin1"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/background_login"
                    android:clickable="true"
                    android:padding="16dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#f16f7d"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnnursesignup1"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_signup"
                    android:clickable="true"
                    android:padding="16dp"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />


                <Button
                    android:id="@+id/btnnurseforgotpassword1"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:padding="16dp"
                    android:text="@string/forgetPass"
                    android:background="@color/colorTransparent"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>